--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
-- name: lookup
-  debug:
-    msg: "{{ item }}"
-  with_inventory_hostnames:
-    - all:!deploy
+- name: Создание сети
+  community.docker.docker_network:
+    name: "{{ networkName }}"
+    driver: overlay
+
+- name: Выкладка сервисов
+  include: "../services/{{ item }}/service.yml"
+  vars:
+    name: "{{ item }}"
+  loop: "{{ services }}"
