--- a/all.yml
+++ b/all.yml
@@ -6,6 +6,8 @@
        tags: preconfig
      - role: deploy
        tags: deploy
+     - role: build
+       tags: build
 
 - name: managers
   hosts: managers
