--- a/roles/deploy/services/secret.yml
+++ b/roles/deploy/services/secret.yml
@@ -1,9 +1,9 @@
 ---
-- name: "[{{ name }}] кофнигурация secret"
+- name: "[{{ name }}] конфигурация secret"
   block:
     - name: "[{{ name }}] cоздаем secret"
       include: "secret-create.yml"
-
+  tags: "{{ name }}"
   rescue:
     - name: "[{{ name }}] удаляем сервис"
       community.docker.docker_swarm_service:
