--- a/roles/deploy/services/secret-create.yml
+++ b/roles/deploy/services/secret-create.yml
@@ -1,12 +1,12 @@
 ---
 - name: "[{{ name }}] cоздаем secret"
   vars:
-    envFile: "{{ lookup('file', '{{ name }}/.env')}}"
+    env_file: "{{ lookup('template', '{{ name }}/.env.j2')}}"
   community.docker.docker_secret:
 
     name: "{{ name }}.env"
-    data: "{{ envFile | b64encode }}"
+    data: "{{ env_file | b64encode }}"
     labels:
-      secret: "{{ envFile | hash('sha1') }}"
+      secret: "{{ env_file | hash('sha1') }}"
     data_is_b64: true
     state: present
