--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -14,10 +14,10 @@ registry_name: "localhost:5000/"
 services:
   - name: api
     version: latest
-  # - name: app
-  #   version: latest
-  # - name: converter
-  #   version: latest
+  - name: app
+    version: latest
+  - name: converter
+    version: latest
   - name: rmq
     version: 3-management
   # - name: nginx
@@ -29,8 +29,8 @@ non_build_services:
 #   - name: nginx
 #     version: latest
 
-# configs:
-#   converter:
-#     queue: q_imageProcessor
+configs:
+  converter:
+    queue: q_imageProcessor
 
 # advertise_addr: 10.11.10.1
