--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -20,17 +20,17 @@ services:
     version: latest
   - name: rmq
     version: 3-management
-  # - name: nginx
-  #   version: latest
+  - name: nginx
+    version: latest
 
 non_build_services:
   - name: rmq
     version: 3-management
-#   - name: nginx
-#     version: latest
+  - name: nginx
+    version: latest
 
 configs:
   converter:
     queue: q_imageProcessor
 
-# advertise_addr: 10.11.10.1
+advertise_addr: 10.11.10.1
