--- a/all.yml
+++ b/all.yml
@@ -1,22 +1,33 @@
 ---
-- name: deploy
+- name: Deploy / build server
   hosts: deploy
   roles:
-     - role: preconfig
-       tags: preconfig
-     - role: deploy
-       tags: deploy
-     - role: build
-       tags: build
+    - role: preconfig
+      tags: preconfig
+    - role: build
+      tags: build
+    - role: deploy
+      tags: deploy
+    - role: swarm_init
+      tags: swarm_init
+    - role: swarm_leave
+      node_name: server2
+      tags: swarm_leave
 
-- name: managers
+- name: Manager
   hosts: managers
   roles:
-     - role: preconfig
-       tags: preconfig
+    - role: preconfig
+      tags: preconfig
+    - role: swarm_join
+      type: manager
+      tags: swarm_join
 
-- name: workers
+- name: Worker
   hosts: workers
   roles:
-     - role: preconfig
-       tags: preconfig
+    - role: preconfig
+      tags: preconfig
+    - role: swarm_join
+      type: worker
+      tags: swarm_join
